[package]
name = "kenja_spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = "4.5.46"
dotenvy = "0.15.7"
mongodb = "3.2.5"
reqwest = { version = "0.12.23", features = ["stream", "gzip", "zstd", "deflate", "brotli"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
