[package]
name = "kenja_spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
dotenvy = "0.15.7"
fantoccini = "0.22.0"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
image = "0.25.8"
mongodb = "3.2.5"
reqwest = { version = "0.12.23", features = ["gzip", "zstd", "deflate", "brotli"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
